hyperlane-svm-agents/stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hyperlane-agents
  labels:
    app.kubernetes.io/part-of: hyperlane-svm-agents
